public/css/timeline.css
  #timeline-title{
      padding-top: 1.75em;
      padding-bottom: 1.25em;
      font-size: 2.75em;
      text-align: center;
  }
 

  .timeline h4{
    font-weight: 500; 
    color:#bcd0f7; 
    font-size: 22px;
    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
  }

  .timeline p{
    font-size: 15px;
    color:#bcd0f7; 
    font-weight: 400; 
    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
  }

  .timeline {
    position: relative;
    background: #272e48;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    border-radius: 5px;
    /* padding: 2rem; */
    padding-left: 2rem;
    padding-right: 2rem;
    margin: 0 auto 1rem auto;
    overflow: hidden;
    border: 3px solid #407bff;
    border-radius: 25px;
    box-shadow: 0 0 35px -15px #407bff, 0 0 16px -8px rgb(0 0 0 / 30%), 0 0 16px -6px rgb(0 0 0 / 3%);
  }

  .timeline-row {
    padding-left: 50%;
    position: relative;
    margin-bottom: 30px;
    margin-top: 30px;
  }

  .timeline-row::before {
    content: "";
    position: absolute;
    top: -30px;
    left: 50%;
    margin-left: -2px;
    border-right: 2px dashed #4b546f;
    height: 50px;
    display: block;
  }

  .timeline-row::after {
    content: "";
    position: absolute;
    top: 20px;
    left: 50%;
    margin-left: -2px;
    border-right: 2px dashed #4b546f;
    height: 100%;
    display: block;
  }

  .timeline-row:first-child::before {
    display: none;
  }
  .timeline-row:last-child::after {
    display: none;
  }

  .timeline-row .timeline-time {
    position: absolute;
    right: 50%;
    top: 15px;
    text-align: right;
    margin-right: 20px;
    color: #bcd0f7;
    font-size: 1.5rem;
    margin-top: 5px;
  }
  .timeline-row .timeline-time small {
    display: block;
    font-size: 0.8rem;
  }
  .timeline-row .timeline-content {
    position: relative;
    padding: 20px 30px;
    background: #1a233a;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    border-radius: 5px;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    text-align: center;
  }
  .timeline-row .timeline-content:after {
    content: "";
    position: absolute;
    top: 20px;
    height: 16px;
    width: 16px;
    background: #1a233a;
  }
  .timeline-row .timeline-content:before {
    content: "";
    position: absolute;
    top: 20px;
    right: -49px;
    width: 20px;
    height: 20px;
    -webkit-border-radius: 100px;
    -moz-border-radius: 100px;
    border-radius: 100px;
    z-index: 10;
    background: white;
    /* border: 2px dashed #4b546f; */
  }
  .timeline-row .timeline-content h4 {
    margin: 0 0 10px 0;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    line-height: 150%;
  }
  .timeline-row .timeline-content p {
    /* margin-bottom: 30px; */
    line-height: 150%;
  }
  .timeline-row .timeline-content i {
    font-size: 1.2rem;
    line-height: 100%;
    padding: 15px;
    -webkit-border-radius: 100px;
    -moz-border-radius: 100px;
    border-radius: 100px;
    background: #272e48;
    margin-bottom: 10px;
    display: inline-block;
  }
  .timeline-row .timeline-content .thumbs {
    margin-bottom: 20px;
    display: flex;
  }
  .timeline-row .timeline-content .thumbs img {
    margin: 5px;
    max-width: 60px;
  }
  .timeline-row .timeline-content .badge {
    color: #ffffff;
    background: linear-gradient(120deg, #00b5fd 0%, #0047b1 100%);
  }
  .timeline-row:nth-child(even) .timeline-content {
    margin-left: 40px;
    /* text-align: left; */
  }
  .timeline-row:nth-child(even) .timeline-content:after {
    left: -8px;
    right: initial;
    border-bottom: 0;
    border-left: 0;
    transform: rotate(-135deg);
  }
  .timeline-row:nth-child(even) .timeline-content:before {
    left: -52px;
    right: initial;
  }
  .timeline-row:nth-child(odd) {
    padding-left: 0;
    padding-right: 50%;
  }
  .timeline-row:nth-child(odd) .timeline-time {
    right: auto;
    left: 50%;
    text-align: left;
    margin-right: 0;
    margin-left: 20px;
  }
  .timeline-row:nth-child(odd) .timeline-content {
    margin-right: 40px;
  }
  .timeline-row:nth-child(odd) .timeline-content:after {
    right: -8px;
    border-left: 0;
    border-bottom: 0;
    transform: rotate(45deg);
  }

  @media (max-width: 992px) {
    .timeline {
      padding: 15px;
    }
    .timeline-row::before {
      left: 12px;
      top: -30px;
      height: 40px;
    }
    .timeline-row::after {
      left: 12px;
      top: 10px;
    }
    .timeline .timeline-row:nth-child(odd) {
      padding: 0;
    }
    .timeline .timeline-row:nth-child(odd) .timeline-time {
      position: relative;
      top: 0;
      left: 0;
      margin: 0 0 10px 30px;
    }
    .timeline .timeline-row:nth-child(odd) .timeline-content {
      margin: 0;
      margin-left: 30px;
    }
    .timeline .timeline-row:nth-child(odd) .timeline-content:before {
      top: -36px;
      left: -30px;
    }
    .timeline .timeline-row:nth-child(odd) .timeline-content:after {
      display: none;
    }
    .timeline .timeline-row:nth-child(even) {
      padding: 0;
    }
    .timeline .timeline-row:nth-child(even) .timeline-time {
      position: relative;
      top: -5px;
      left: 0;
      margin: 0 0 10px 30px;
      text-align: left;
    }
    .timeline .timeline-row:nth-child(even) .timeline-content {
      margin: 0;
      margin-left: 30px;
    }
    .timeline .timeline-row:nth-child(even) .timeline-content:before {
      top: -36px;
      left: -30px;
    }
    .timeline .timeline-row:nth-child(even) .timeline-content:after {
      display: none;
    }
  }

